# cpp-recipes

./: .clang-format  .clang-tidy  CMakeLists.txt  main.cc
.devcontainer/: Dockerfile  devcontainer.json
c++17/: tie.cpp
simple/: self_increment.cpp
smart_ptr/: auto_variable.cpp
